[gd_scene load_steps=15 format=2]

[ext_resource path="res://resources/fonts/gomarice_no_continue.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Score.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0.333333, 0.329412, 0.164706, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=8]
size = 80
outline_size = 3
outline_color = Color( 0.333333, 0.329412, 0.164706, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 1 )
draw_center = false

[node name="Score" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.392157 )

[node name="ScoreList" type="ItemList" parent="."]
margin_left = 110.0
margin_top = 500.0
margin_right = 1810.0
margin_bottom = 580.0
grow_vertical = 2
custom_colors/guide_color = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 1, 0.964706, 0.333333, 1 )
custom_constants/vseparation = 20
custom_constants/icon_margin = 20
custom_constants/hseparation = 60
custom_fonts/font = SubResource( 1 )
custom_styles/cursor = SubResource( 2 )
custom_styles/selected_focus = SubResource( 3 )
custom_styles/bg_focus = SubResource( 4 )
custom_styles/cursor_unfocused = SubResource( 5 )
custom_styles/selected = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
auto_height = true
max_columns = 6
same_column_width = true
fixed_column_width = 220
fixed_icon_size = Vector2( 80, 80 )

[node name="NextRound" type="Button" parent="."]
margin_left = 708.5
margin_top = 955.0
margin_right = 1303.5
margin_bottom = 1036.0
grow_horizontal = 2
focus_mode = 0
custom_colors/font_color = Color( 1, 0.964706, 0.333333, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = "Start next round"

[node name="Return" type="Button" parent="."]
margin_left = 650.5
margin_top = 955.0
margin_right = 1361.5
margin_bottom = 1036.0
grow_horizontal = 2
focus_mode = 0
custom_colors/font_color = Color( 1, 0.964706, 0.333333, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
enabled_focus_mode = 0
text = "Return to main menu"

[connection signal="pressed" from="NextRound" to="." method="_on_NextRound_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]
